# AAD-project

./: .gitignore  QUICKSTART.md  README.md  benchmark_comprehensive  benchmark_comprehensive.cpp  benchmark_detailed_C125.9.txt.csv  benchmark_optimized  benchmark_sat_optimized  comprehensive_benchmark_updated.ipynb  maximum_clique_benchmark_colab.ipynb
benchmark/: benchmark.cpp  benchmark_sat.cpp  benchmark_sat_optimized.cpp
benchmark_results/: algorithm_summary_20251120_081140.csv  benchmark_all_20251120_081140.csv  benchmark_detailed_ca-GrQc.txt.csv  benchmark_detailed_email-Eu-core.txt.csv  benchmark_detailed_facebook_combined.txt.csv  benchmark_detailed_keller4.txt.csv  benchmark_detailed_p_hat300-1.txt.csv  benchmark_detailed_random_180v.txt.csv  benchmark_detailed_rmat_er_large.txt.csv  benchmark_detailed_rmat_er_small.txt.csv  benchmark_detailed_rmat_sd1_large.txt.csv  benchmark_detailed_rmat_sd1_small.txt.csv  benchmark_detailed_rmat_sd2_large.txt.csv  benchmark_detailed_rmat_sd2_small.txt.csv  benchmark_detailed_sat3_large.txt.csv  benchmark_detailed_sat3_small.txt.csv
datasets/: SAT_GRAPHS.md  download_datasets.sh  generate_sat_graphs.py  test_small.txt
datasets/benchmark/: C125.9.txt  C250.9.txt  ca-GrQc.txt  email-Eu-core.txt
datasets/real_world/: facebook_combined.txt
datasets/sat_generated/: random_3sat_medium.txt  random_3sat_small.txt
datasets/synthetic/: random_180v.txt  rmat_er_large.txt  rmat_er_small.txt  rmat_sd1_large.txt  rmat_sd1_small.txt  rmat_sd2_large.txt  rmat_sd2_small.txt  sat3_large.txt  sat3_small.txt
include/: degeneracy_bk.hpp  gpu_optimized.cuh  graph.hpp  simulated_annealing.hpp
maximum_clique_project/: .gitignore  CMakeLists.txt  INDEX.md  INPUT_FORMAT_AND_PERFORMANCE.md  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  benchmark_sat  build.sh
maximum_clique_project/benchmark/: benchmark.cpp
maximum_clique_project/datasets/: DATASETS.md  test_triangle.txt
maximum_clique_project/datasets/sat_generated/: planted_3sat_30v_120c.txt  simple_3sat.txt
maximum_clique_project/include/: bron_kerbosch.hpp  cpu_optimized.hpp  greedy.hpp  ostergard.hpp  randomized_heuristic.hpp  tomita.hpp
maximum_clique_project/results/: analyze_results.py
maximum_clique_project/src/: bron_kerbosch.cpp  cpu_optimized.cpp  degeneracy_bk.cpp  graph.cpp  greedy.cpp  randomized_heuristic.cpp  simulated_annealing.cpp  tomita.cpp
scripts/: convert_snap_to_dimacs.py  download_benchmark_datasets.py  generate_synthetic_graphs.py  visualize_results.py
src/: bbmc.cpp  bron_kerbosch.cpp  cpu_optimized.cpp  degeneracy_bk.cpp  gpu_optimized.cu  graph.cpp  greedy.cpp  maxclique_dyn.cpp  ostergard.cpp  randomized_heuristic.cpp  simulated_annealing.cpp  tomita.cpp
